--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>Livraria</title>
     <!--Link Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!--Header-->
     <header>
         <!--Logo-->
-        <img src="./image/tema_livro.jpg" alt="Logotipo da empresa">
+        <img class="img-logo" src="./image/tema_livro.jpg" alt="Logotipo da empresa">
+        <audio src="./media/eletronica.mp3" autoplay></audio>
         <!--Menu-->
         <nav>
             <ul class="nav justify-content-end">
@@ -181,7 +183,33 @@
     </section>
     <!--Rodapé-->
     <footer id="rodape">
-
+      <img id="logotipo-rodape" class="img-logo" src="./image/tema_livro.jpg" alt="Logotipo">
+        <div class="enderecos-rodape1">
+          <p>E-mail:</p>
+          <p>livraria@gmail.com</p>
+        </div>
+        <div class="enderecos-rodape2">
+          <p>Endereço:</p>
+          <p>Rua dos livros 666</p>
+        </div>
+        <div class="enderecos-rodape3">
+          <p>Telefone:</p>
+          <p>(14)7777-6666</p>
+        </div>
+      <div id="midias-sociais">
+        <a href="#"><img src="./image/whatsapp-brands.svg" alt="Whatsapp"></a>
+        <a href="#"><img src="./image/facebook-brands.svg" alt="Facebook"></a>
+        <a href="#"><img src="./image/youtube-brands.svg" alt="Youtube"></a>
+      </div>
+      <nav id="menu-rodape">
+        <ul>
+            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Livros</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Música</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+        </ul>
+    </nav>
     </footer>
     <!--Scripts-->
     <!-- bootstrap -->
